# chat

./: .gitignore  README.md  requisitos.md  validate_nickname.py  validate_password.py
client/: client.js  functions.js  main.js  package-lock.json  package.json  teste.db  tmp.txt
client/data/: configs.json  defaultConfigs.json  user.json
client/data/language/: en-US.json  pt-BR.json
client/data/theme/: light.json  theme.json
client/pages/: configs.html  login.html  login.js  main.css  main.html  main.js  register.html  register.js  theme.css  utils.js
server/: .gitignore  Cargo.toml  doc.txt  sqlite3.lib  teste.db
server/channels_data/: 1.db
server/src/: channel.rs  client.rs  database.rs  main.rs  message.rs  profile.rs  test_main.rs  time.rs
server/src/client_prototype/: main.rs
