[package]
name = "server"
version = "0.1.0"
authors = ["gabrielcfvg <56398419+gabrielcfvg@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client_prototype"
path = "src/client_prototype/main.rs"

[[bin]]
name = "test_main"
path = "src/test_main.rs"

[dependencies]
serde_json = "1.0.56"
clap = "2.33.1"
rusqlite = "0.23.1"
openssl = "0.10.30"
lazy_static = "1.4.0"
hex = "0.4.2"